vero case study

--- a/placea-furniture-shop.html
+++ b/placea-furniture-shop.html
@@ -374,7 +374,7 @@
 	<!--End Header -->
 	
 	<!-- Start Breadcrumb Area -->
-	<section class="case-study pt-5">
+	<section class="case-study pt-5 placea-case-study">
 		<div class="container">
 			<div class="row justify-content-md-center">
 				<div class="col-lg-6 v-center pt-5 pt-md-5 pt-lg-0">
@@ -405,7 +405,7 @@
 	</section>
 	<!-- End Discover Section -->
 
-	<!-- Start Process Section -->
+	<!-- Start Process Design Section -->
 	<section class="placea-process py-3 py-md-5 py-lg-5">
 		<div class="container">
 			<div class="row">
@@ -420,92 +420,41 @@
 			</div>
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
-					<p class="placea-process-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+					<p class="placea-process-text">This App has been designed in chunks; the App process is divided into seven phases, starting from requirement gathering, then teams follow the following steps.</p>
 				</div>
 			</div>
-		</div>
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-xs-12 col-lg-12 col-md-12 ">
-					<!-- design process steps-->
-					<!-- Nav tabs -->
-					<ul class="nav nav-tabs process-model more-icon-preocess" role="tablist">
-						<li role="presentation" class="active ">
-							<a href="#discover" aria-controls="discover" role="tab" data-bs-toggle="tab">
-								<i class=""aria-hidden=" true">
-									<img src="images/case-study/placea/placea-icon-1.png" alt="" style="padding: 5px;height: 49px;">
-								</i>
-								<p>Workshops</p>
-							</a>
-						</li>
-						<li role="presentation">
-							<a href="#strategy" aria-controls="strategy" role="tab" data-bs-toggle="tab">
-								<i class="fa fa-search" aria-hidden="true"></i>
-								<p>Research</p>
-							</a>
-						</li>
-						<li role="presentation">
-							<a href="#optimization" aria-controls="optimization" role="tab" data-bs-toggle="tab">
-								<i class="fa-solid fa-pencil"></i>
-								<p>Sketching</p>
-							</a>
-						</li>
-						<li role="presentation">
-							<a href="#content" aria-controls="content" role="tab" data-bs-toggle="tab">
-								<i class="" aria-hidden="true">
-									<img src="images/case-study/placea/placea-icon-4.png" alt="">
-								</i>
-								<p>Wireframes</p>
-							</a>
-						</li>
-						<li role="presentation">
-							<a href="#reporting" aria-controls="reporting" role="tab" data-bs-toggle="tab">
-								<i class="fa fa-eyedropper" aria-hidden="true"></i>
-								<p>Branding</p>
-							</a>
-						</li>
-						<li role="presentation">
-							<a href="#reporting" aria-controls="reporting" role="tab" data-bs-toggle="tab">
-								<i class="fa fa-paint-brush" aria-hidden="true"></i>
-								<p>Visuals</p>
-							</a>
-						</li>
-						<li role="presentation">
-							<a href="#reporting" aria-controls="reporting" role="tab" data-bs-toggle="tab">
-								<i class="" aria-hidden="true">
-									<img src="images/case-study/placea/placea-icon-7.png" alt="">
-								</i>
-								<p>Development</p>
-							</a>
-						</li>
-					</ul>
+			<div class="row justify-content-center mt-5">
+				<div class="col-xs-12">
+					<img src="images/case-study/case-study-process.png" alt="Case Study Process" class="img-fluid case-study-process-img">
 				</div>
 			</div>	
+		</div>
 	</section>
-	<!-- End Process Section -->
+	<!-- End Process Design Section -->
 
-	<!-- Start Discover Section -->
-	<section class="discover-and-workshop py-3 py-md-5 py-lg-5">
+	<!-- Start Solutions Section -->
+	<section class="placea-solutions py-3 py-md-5 py-lg-5">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 wow fadeInLeft">
+					<h2>The Solutions</h2>
 					<div class="common-heading text-l">
-						<h2 class="headingDiscovery">Discovery & workshopes</h2>
-						<p class="DescriptionDiscovery"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+						<h3 class="headingDiscovery">User Experience</h3>
+						<p class="DescriptionDiscovery">Enhances user experience using Augmented Reality users can set furniture on their locations, which helps the user know about the perfect look of the Place after using furniture which they like to buy for their home, office, Etc.</p>
 					</div>
 					<div class="common-heading text-l">
-						<h2 class="headingDiscovery2">Day 1</h2>
-						<p class="DescriptionDiscovery"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem </p>
+						<h3 class="headingDiscovery2">Payment Integration</h3>
+						<p class="DescriptionDiscovery">Through secure payment integration, users can buy online through multiple payment methods; availability helps the user to pay as they want.</p>
 					</div>
 					<div class="common-heading text-l">
-						<h2 class="headingDiscovery2">Day 2</h2>
-						<p class="DescriptionDiscovery2"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem </p>
+						<h3 class="headingDiscovery2">Ease of selection</h3>
+						<p class="DescriptionDiscovery2">The App's interface supports users' ease of selecting products using the icon. There are multiple ranges of different furniture icons available on the App; by clicking them, users redirect to a specific product page where they can easily select the product they want to buy.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- End Discover Section -->
+	<!-- End Solutions Section -->
 
 	<!-- Start Resarch Section -->
 	<section class="placea-resarch py-3 py-md-5 py-lg-5">
@@ -522,7 +471,7 @@
 			</div>
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
-					<p class="placea-research-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+					<p class="placea-research-text">This App has been designed in chunks; the App process is divided into seven phases, starting from requirement gathering, then teams follow the following steps.</p>
 				</div>
 			</div>
 			<div class="row pt-3 pt-md-5">
@@ -532,8 +481,9 @@
 							<div class="item">
 								<div class="card">
 									<div class="card-body">
-										<img src="images/case-study/placea/placea-user.jpg" class="award-img profileCard">
-										<p class="text-justify pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quibusdam explicabo unde esse eligendi laborum dolorem natus fuga ad reprehenderit!</p>
+										<img src="images/case-study/user.jpg" class="award-img profileCard">
+										<h4 class="placea-research-heading">User Research</h4>
+										<p class="placea-research-text">It is how users interact with our interface. Our user research was done using the following video guide, Personal Feed, Community, Online Store, and Testing.</p>
 									</div>
 								</div>
 							</div>
@@ -542,8 +492,9 @@
 							<div class="item">
 								<div class="card">
 									<div class="card-body">
-										<img src="images/case-study/placea/placea-user.jpg" class="award-img profileCard">
-										<p class="text-justify pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia inventore, temporibus maxime accusantium voluptate deleniti id ex in quam vero!</p>
+										<img src="images/case-study/user.jpg" class="award-img profileCard">
+										<h4 class="placea-research-heading">Video Guide</h4>
+										<p class="placea-research-text">Using the video guide, we have launched the users' feedback in all phases, which helps us a lot with what users want and what should be added to the App.</p>
 									</div>
 								</div>
 							</div>
@@ -552,8 +503,9 @@
 							<div class="item">
 								<div class="card">
 									<div class="card-body">
-										<img src="images/case-study/placea/placea-user.jpg" class="award-img profileCard">
-										<p class="text-justify pt-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione maxime molestias at libero atque laboriosam vel corporis dolore unde perferendis.</p>
+										<img src="images/case-study/user.jpg" class="award-img profileCard">
+										<h4 class="placea-research-heading">Personal Feed</h4>
+										<p class="placea-research-text">It's all about the personal feedback of users; it's done by social media question posts. Where users can give suggestions about the app functionalities and design.</p>
 									</div>
 								</div>
 							</div>
@@ -562,8 +514,9 @@
 							<div class="item">
 								<div class="card">
 									<div class="card-body">
-										<img src="images/case-study/placea/placea-user.jpg" class="award-img profileCard">
-										<p class="text-justify pt-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti nesciunt eum ullam accusantium ab labore, sit obcaecati quidem culpa dolores.</p>
+										<img src="images/case-study/user.jpg" class="award-img profileCard">
+										<h4 class="placea-research-heading">Community</h4>
+										<p class="placea-research-text">In community research, we have posted the questions about the App on big platforms like Quora and Reddit.</p>
 									</div>
 								</div>
 							</div>
@@ -572,38 +525,9 @@
 							<div class="item">
 								<div class="card">
 									<div class="card-body">
-										<img src="images/case-study/placea/placea-user.jpg" class="award-img profileCard">
-										<p class="text-justify pt-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, perspiciatis modi saepe voluptate exercitationem ab reiciendis non eligendi aliquid omnis.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="placea-research-item">
-							<div class="item">
-								<div class="card">
-									<div class="card-body">
-										<img src="images/case-study/placea/placea-user.jpg" class="award-img profileCard">
-										<p class="text-justify pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quia voluptates obcaecati doloribus nobis nulla animi facilis harum quos earum.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="placea-research-item odd-item">
-							<div class="item">
-								<div class="card">
-									<div class="card-body">
-										<img src="images/case-study/placea/placea-user.jpg" class="award-img profileCard">
-										<p class="text-justify pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, asperiores vitae. Est temporibus totam dignissimos cumque tempore asperiores obcaecati ipsam?</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="placea-research-item">
-							<div class="item">
-								<div class="card">
-									<div class="card-body">
-										<img src="images/case-study/placea/placea-user.jpg" class="award-img profileCard">
-										<p class="text-justify pt-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque architecto enim cum, tenetur natus perspiciatis? Eaque unde temporibus officiis sed?</p>
+										<img src="images/case-study/user.jpg" class="award-img profileCard">
+										<h4 class="placea-research-heading">Online-store</h4>
+										<p class="placea-research-text">This research has been done by using competitors' online stores. This activity helped us make changes that are essential to add to our App. This activity helped a lot to make a better experience.</p>
 									</div>
 								</div>
 							</div>
@@ -617,7 +541,7 @@
 	<!-- Start Design Section -->
 	<section class="placea-design py-3 py-md-3 py-lg-4">
 		<div class="container">
-			<div class="row justify-content-center">
+			<div class="row text-center">
 				<div class="col-12">
 					<img src="images/case-study/placea/placea-design-circle.png" alt="Placea Design Circle" class="img-fluid placea-design-circle">
 				</div>
@@ -689,7 +613,7 @@
 			</div>
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
-					<p class="placea-wireframe-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+					<p class="placea-wireframe-text">An app wireframe is a two-dimensional sketch. In the pleacea initial phase, our experts designed wireframes consisting of six sketches mentioned below in the visual form.</p>
 				</div>
 			</div>
 			<div class="row pt-3 justify-content-center text-center">
@@ -716,56 +640,58 @@
 	</section>
 	<!-- End Wireframe Section -->
 
-	<!-- Start Visuals Section -->
-	<section class="placea-visuals py-3 py-md-3 py-lg-4">
+	<!-- Start Color Palette -->
+	<section class="placea-color-palette py-5">
 		<div class="container">
-			<div class="row d-flex justify-content-center">
+			<div class="row justify-content-center">
 				<div class="col-lg-1 col-md-1 col-sm-3 col-6">
 					<img src="images/case-study/placea/plecea-circle.png" lt="Placea Circle" class="img-fluid placea-circle">
 				</div>
 			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
-					<h2 class="placea-visual-heading">Visual</h2>
+			<div class="row justify-content-center">
+				<div class="col-lg-2 col-md-3 col-sm-6 col-12">
+					<h1 class="placea-color-heading">Visual</h1>
+	
+					</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-lg-8 text-center">
+				<p class="placea-color-text">To make this visual clear and vibrant, we used orange as the primary hue, while the other colors are for furniture that can be made in a variety of different shades.</p>
 				</div>
 			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
-					<p class="placea-visual-text">To make this visual clear and vibrant, we used orange as the primary hue, while the other colors are for furniture that can be made in a variety of different shades.</p>
+
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
+					<img src="images/case-study/placea/placea-color-1.png" alt="Placea Color" class="img-fluid placea-color-palatte">
 				</div>
-			</div>
-			<div class="row pt-4">
-				<div class="col-sm-12 col-md-2 text-center"> 
-					<img src="images/case-study/placea/placea-color-1.png" alt="Placea Color" class="img-fluid placea-color-img">
+				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
+					<img src="images/case-study/placea/placea-color-2.png" alt="Placea Color" class="img-fluid placea-color-palatte">
 				</div>
-				<div class="col-sm-12 col-md-2 text-center pt-4 pt-md-0">
-					<img src="images/case-study/placea/placea-color-2.png" alt="Placea Color" class="img-fluid placea-color-img">
+				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
+					<img src="images/case-study/placea/placea-color-3.png" alt="Placea Color" class="img-fluid placea-color-palatte">
 				</div>
-				<div class="col-sm-12 col-md-2 text-center pt-4 pt-md-0">
-					<img src="images/case-study/placea/placea-color-3.png" alt="Placea Color" class="img-fluid placea-color-img">
+				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
+					<img src="images/case-study/placea/placea-color-4.png" alt="Placea Color" class="img-fluid placea-color-palatte">
 				</div>
-				<div class="col-sm-12 col-md-2 text-center pt-4 pt-md-0">
-					<img src="images/case-study/placea/placea-color-4.png" alt="Placea Color" class="img-fluid placea-color-img">
+				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
+					<img src="images/case-study/placea/placea-color-5.png" alt="Placea Color" class="img-fluid placea-color-palatte">
 				</div>
-				<div class="col-sm-12 col-md-2 text-center pt-4 pt-md-0">
-					<img src="images/case-study/placea/placea-color-5.png" alt="Placea Color" class="img-fluid placea-color-img">
-				</div>
-				<div class="col-sm-12 col-md-2 text-center pt-4 pt-md-0">
-					<img src="images/case-study/placea/placea-color-6.png" alt="Placea Color" class="img-fluid placea-color-img">
+				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
+					<img src="images/case-study/placea/placea-color-6.png" alt="Placea Color" class="img-fluid placea-color-palatte">
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- End Visuals Section -->
-
+	<!-- End Color Pallete -->
+	
 	<!-- Start Visuals Section -->
-	<section class="placea-app-visuals py-3 py-md-3 py-lg-4 mt-5">
-		<img src="images/case-study/placea/placea-app-1.png" alt="Placea App" class="img-fluid left-side">
-		<img src="images/case-study/placea/placea-app-2.png" alt="Placea App" class="img-fluid right-side">
-		<img src="images/case-study/placea/placea-app-3.png" alt="Placea App" class="img-fluid left-side">
-		<img src="images/case-study/placea/placea-app-4.png" alt="Placea App" class="img-fluid right-side">
-		<img src="images/case-study/placea/placea-app-5.png" alt="Placea App" class="img-fluid left-side">
-		<img src="images/case-study/placea/placea-app-6.png" alt="Placea App" class="img-fluid right-side">
+	<section class="placea-app-visuals py-3 py-md-3 py-lg-5 mt-5">
+		<img src="images/case-study/placea/placea-app-1.png" alt="Placea App" class="img-fluid left-side-img-1">
+		<img src="images/case-study/placea/placea-app-2.png" alt="Placea App" class="img-fluid right-side-img-1">
+		<img src="images/case-study/placea/placea-app-3.png" alt="Placea App" class="img-fluid left-side-img-2">
+		<img src="images/case-study/placea/placea-app-4.png" alt="Placea App" class="img-fluid right-side-img-2">
+		<img src="images/case-study/placea/placea-app-5.png" alt="Placea App" class="img-fluid left-side-img-3">
+		<img src="images/case-study/placea/placea-app-6.png" alt="Placea App" class="img-fluid right-side-img-3">
 		<img src="images/case-study/placea/placea-app-slider.png" alt="Placea App" class="img-fluid sliderShapeImg">
 	</section>
 	<!-- End Visuals Section -->
@@ -792,8 +718,8 @@
 					<img src="images/case-study/placea/placea-app-img-2.png" alt="Placea App" class="img-fluid placea-app-img">
 				</div>
 				<div class="col-lg-6 wow fadeInRight v-center">
-					<h2 class="placea-app-heading">Name here</h2>
-					<p class="placea-app-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
+					<h2 class="placea-app-heading">AR Mode Page Design</h2>
+					<p class="placea-app-text">Using the Augmented Reality mode page, users can experience live visuals as simple as they view the thing in real life. Its increased user interest and real-life experience enhance the chances of product buying by the user.</p>
 				</div>
 			</div>
 		</div>
@@ -808,10 +734,10 @@
 			</div>
 			<div class="row pt-4">
 				<div class="col-sm-12 col-md-6 text-center">
-					<img src="images/case-study/placea/placea-app-store.png" class="img-fluid" alt="Placea App Store">
+					<img src="images/case-study/app-store.png" class="img-fluid" alt="Placea App Store">
 				</div>
 				<div class="col-sm-12 col-md-6 text-center">
-					<img src="images/case-study/placea/placea-play-store.png" class="img-fluid" alt="Placea Play Store">
+					<img src="images/case-study/play-store.png" class="img-fluid" alt="Placea Play Store">
 				</div>
 			</div>
 		</div>
