home page updated

--- a/index.html
+++ b/index.html
@@ -504,9 +504,9 @@
 					<div class="common-heading">
 						<span>We Are Creative Agency</span>
 						<h1 class="mb30"><span class="text-second">Top-rated</span> Web And Mobile App Development Company</h1>
-						<p>Lorem Ipsum is <span class="text-radius text-light text-animation bg-b">simply dummy</span> text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <span class="text-bold">Lorem Ipsum</span> is simply dummy text of the printing and typesetting industry. <span class="text-bold">Lorem Ipsum </span> is simply dummy text of the printing and typesetting industry. </p>
-						<h3 class="mt30 mb30">Big Ideas, creative people, new technology.</h3>
-						<p>Lorem Ipsum is <span class="text-bold">simply dummy</span> text of the printing and typesetting industry. Lorem Ipsum has been the industry's specimen book. Lorem Ipsum is simply dummy text of the <span class="text-bold">printing</span> and typesetting industry. <span class="text-bold">Lorem Ipsum is simply</span> dummy text of the printing and typesetting industry. is simply dummy text of the printing and typesetting industry. </p>
+						<p>Futurealiti is a leading Web/ App development company with an award-winning team. The main aim of Futurealiti is to develop a Client-Focused, Customer-Centric, and Flexible Web and App solution for their clients so they can scale their business upto 10x times. We Help you improve your branding, increase conversion rates and maximize your revenue.</p>
+						<h3 class="mt30 mb30">Our High-End Mobile App Development Services</h3>
+						<p>Our high-end mobile app and web development process is unique. Our company offers a full cycle of application design, integration, and management services. Our professional team leads the entire mobile app development process from concept framing to delivery and supports their customers until they not satisfied.</p>
 					</div>
 				</div>
 			</div>
@@ -1241,43 +1241,43 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-3">
-					<h3 class="common-heading work">How we work</h3>
+					<h3 class="common-heading work">How Do we work</h3>
 					<p class="text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-3">
 					<div class="row pt-5 pt-lg-0">
 						<p class="process-number">01</p>
 						<p class="process-heading">Briefing</p>
-						<p class="process-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<p class="process-desc">In the first stage, we create a full wireframe of the project where we guide our customer about the whole implementation.</p>
 					</div>
 					<div class="row pt-5">
 						<p class="process-number">04</p>
 						<p class="process-heading">Design</p>
-						<p class="process-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<p class="process-desc">At this stage, our professional team of developers and designers sit together where they talk about the design sociologies and UI/UX of your website and finalize your project ( web/app).</p>
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-3">
 					<div class="row pt-5 pt-lg-0">
 						<p class="process-number">02</p>
-						<p class="process-heading">Evaluation</p>
-						<p class="process-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<p class="process-heading">Time Distrubution</p>
+						<p class="process-desc">At this stage, we smartly distribute the time and break the whole development process into chunks by assigning the task to different persons so the project can complete before the deadline with 100% efficiency.Workshops.</p>
 					</div>
 					<div class="row pt-5">
 						<p class="process-number">05</p>
 						<p class="process-heading">Implementation</p>
-						<p class="process-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<p class="process-desc">After structure framing, design finalizing and time distributions our experts implement. All the things in such a professional manner to give you the best satisfactory results.</p>
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-3">
 					<div class="row pt-5 pt-lg-0">
 						<p class="process-number">03</p>
-						<p class="process-heading">Workshops</p>
-						<p class="process-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<p class="process-heading">Weekly Meetings</p>
+						<p class="process-desc">We believe in complete transparency; that’s why do we schedule weekly meetings with our clients, so they also know about their projects like when it’ll be complete or how our team works on a project. </p>
 					</div>
 					<div class="row pt-5">
 						<p class="process-number">06</p>
 						<p class="process-heading">Quality Assurance</p>
-						<p class="process-desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<p class="process-desc">After completion of the project, our quality assurance ensure the whole project will be errorless in this stage our more than 10 highly trained quality insurance experts take over your project and check each and everything so they get the best results.</p>
 					</div>
 				</div>
 			</div>
@@ -1734,12 +1734,12 @@
 						<div class="row">
 							<div class="col-lg-6 wow fadeInLeft">
 								<div class="common-heading text-l">
-									<h3 class="key-highlight">Key Highlights</h3>
+									<h3 class="key-highlight">Our Achievments</h3>
 									<h5 class="key-numbers">Our work in numbers.</h5>
 								</div>
 							</div>
 							<div class="col-lg-6 wow fadeInRight my-auto">
-								<p class="key-desc">Build your web presence to thrive just like many others have, &amp; let experienced technicians and digital creators develop functionalities that rivet your target audience.</p>
+								<p class="key-desc">With the help of 50 plus highly trained professional team we're able to achieve these amazing numbers which is enough proof of our success.We donot speak about our succes, our work speaks about our success.</p>
 							</div>
 						</div>
 					</div>
@@ -1986,6 +1986,21 @@
                     <div class="common-heading ptag">
                         <h2 class="text-white">Why Choose Us</h2>
                         <p class="pb-3 text-white">Along with designing and developing your web presence, we propose business-oriented solutions that fit your needs and speak volumes of your values as a brand. With experienced web developers and digital artisans, you get a state-of-the-art solution with a cutting-edge appeal that engages more people online. Leverage powerful technologies & robust architecture to build a web solution that fulfills your needs under packaged web development services.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Why Choose -->
+
+	<!-- Start Why Choose -->
+    <section class="py-3 py-md-3 py-lg-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-sm-12 col-md-10">
+                    <div class="common-heading ptag">
+                        <h2>Why Hire us?</h2>
+                        <p class="pb-3">Futurealiti is the leading brand when we talk about the Web development, app development and AR and VR Solutions.We have a team of 50 plus highly trained professional who give you result oriented services.Futurealiti is an award wininng company partner with many world's biggest technology companies.We beleive in quality our team will deliver best results until you not satisfied.</p>
                     </div>
                 </div>
             </div>
