--- a/vero.html
+++ b/vero.html
@@ -555,8 +555,8 @@
 	<!-- End Visuals Section -->
 
 	<!-- Start Prototype Section -->
-	<section class="py-5">
-        <div class="container userResearchBack">
+	<section class="py-5 vero-prototype">
+        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <h2 class="about-velo-app">Prototype</h2>
